--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,30 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.openblu"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="7" />
-
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".OpenBluActivity" android:theme="@android:style/Theme.NoTitleBar"
-                  android:label="@string/app_name">
+<?xml version="1.0" encoding="UTF-8"?>
+<manifest android:versionCode="1" android:versionName="1.0"
+    package="com.openblu" xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-sdk android:minSdkVersion="7"/>
+    <application android:icon="@drawable/icon"
+        android:label="@string/app_name" android:theme="@android:style/Theme.Light.NoTitleBar">
+        <activity android:label="@string/app_name" android:name=".OpenBluActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        
-        <activity android:name=".SampleActivity" android:theme="@android:style/Theme.NoTitleBar"
-                  android:label="Take a Sample"/>
-        
-        <activity android:name=".MapActivity" android:theme="@android:style/Theme.NoTitleBar"
-                  android:label="Map"/>
-        
-        <activity android:name=".NewsActivity" android:theme="@android:style/Theme.NoTitleBar"
-                  android:label="News"/>
-        
-        <activity android:name=".AboutActivity" android:theme="@android:style/Theme.NoTitleBar"
-                  android:label="About"/>
-
+        <activity android:label="Take a Sample" android:name=".SampleActivity"/>
+        <activity android:label="Map" android:name=".MapActivity"/>
+        <activity android:label="News" android:name=".NewsActivity"/>
+        <activity android:label="About" android:name=".AboutActivity"/>
+        <activity android:label="Make a quick Assesment" android:name=".AssessmentActivity"/>
+        <activity android:label="Physical Assesment" android:name=".BiologicalActivity"/>
+        <activity android:label="Physical Assesment" android:name=".PhysicalActivity"/>
+        <activity android:label="Chemical Assesment" android:name=".ChemicalActivity"/>
+        <provider
+            android:authorities="com.openblu.data.rapidassessmentcontentprovider" android:name="com.openblu.data.RAPIDASSESSMENTContentProvider"/>
+        <provider
+            android:authorities="com.openblu.data.rapiddescriptionscontentprovider" android:name="com.openblu.data.RAPIDDESCRIPTIONSContentProvider"/>
     </application>
 </manifest>
